# CLAM

./: net_conf.sh  readMe.md  setup.sh
ControlPC/: Conf_ControlPC.toml  ControlPC.py  main.py  plotter.py
RxMeas/: CMakeLists.txt  RxMeas.cpp  RxMeas.hpp  main.cpp
TxUUT/: ServoController.py  TxUUT.py  main.py  transmitter_interface.py
utils/: External.cpp  External.hpp  Messages.proto  ProtobufTransformer.cpp  ProtobufTransformer.hpp  ProtobufTransformer.py  SignalRx.cpp  SignalRx.hpp  UDPcommunicator.cpp  UDPcommunicator.hpp  UDPcommunicator.py  tools.py
